--- a/css/custom.css
+++ b/css/custom.css
@@ -11,11 +11,10 @@ h1{
 h2{
     font-size: 4em;
     font-weight: 100;
-    color: #0386c9
+    color: #0386c9;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }            
-h1:first-of-type, h2:first-of-type, h3:first-of-type{
-    /*margin-top: 0;*/
-}
 a{
     color: #0386c9;
     text-decoration: none;
@@ -61,7 +60,7 @@ a:hover{
     margin-left: .5em;
 }               
 header{
-    height: 75%;
+    height: 70%;
     background-color: skyblue;
     background-image: url('../img/mountain-filter.jpg');
     background-size: cover;
@@ -82,21 +81,14 @@ header div{
     /*align-items:center;*/
 }
 header h1{
-    font-size: 6em;
-    margin: 0 0 .25em 0;
+    font-size: 5em;
     line-height: 1em;
-    padding: 0 .5em;
 }
 header h2{
-    margin: 0 0 2em 0;
+    /* margin: 0 0 2em 0; */
     color: white;
     font-size: 1.5em;
     font-weight: 900;
-    padding: 0 .5em;
-}
-.container{
-    margin:0 auto;
-    width: 80%;
 }
 
 
@@ -204,9 +196,9 @@ footer{
     body{
         font-size: 100%;
     }
-    header h2{
-        margin-bottom:6em;
-    }    
+    header h1{
+        font-size: 6em;
+    }  
 
     #details{
         font-size: 2em;
